# folio-data-anonymization

./: .gitignore  .sonarcloud.properties  README.md  airflow-values.yaml  lombok.config  pom.xml  pyproject.toml
.github/workflows/: lint.yml  maven.yml  tests.yml  typechecking.yml
docs/: config.sample.json5  interactive-mode.md  non-interactive-mode.md  sample-report.json  sample-rerun.json
docs/dev/: Creating a job.md  Job architecture.uxf  Job stages and parts.md
folio_data_anonymization/: anonymizer.py
folio_data_anonymization/dags/: anonymize_data.py  anonymize_orgs.py  select_tables.py  truncate.py
folio_data_anonymization/git_dags/: truncate.py
folio_data_anonymization/git_plugins/: truncate.py  utils.py
folio_data_anonymization/plugins/: anonymize.py  select_tables.py  sql_pool.py  truncate.py  utils.py
folio_data_anonymization/plugins/config/: truncate-schemas-tables.json  truncate_schemas_tables.json
folio_data_anonymization/plugins/sql/: select_faked_user.sql
folio_data_anonymization/plugins/truncate/: truncate.py
lib/: README.md
plugins/: anonymizer.py  users.py  utils.py
src/main/java/org.folio.data/: UserDataOverwriter.java
src/main/resources/: application.yml  db.properties  logback.xml
src/main/resources/address-values/: city.txt  country.txt  state.txt  street.txt  street2.txt  zipcode.txt
src/main/resources/seed/: profile-picture-seed.csv  saml.jks
tests/: conftest.py  test_anonymize_data_dag.py  test_anonymizer.py  test_database.py  test_providers.py  test_select_tables.py  test_truncate_tables.py  test_utils.py
(+142 files in other folders)
